project(template_test)

cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAG} -std=c++11 -Wall")

#add_executable(templateBasic templateBasic.cpp)
add_executable(templateClass2 templateClass2.cpp)
add_executable(templateClass1 templateClass1.cpp)
add_executable(templateBasic2 templateBasic2.cpp)
add_executable(templateBasic1 templateBasic1.cpp)
